feat: env for fake

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,8 @@ DATABASE_URL=postgresql://postgres:postgres@db:5432/communication
 # DEV ENVS
 # ===========================================================
 PORT=3000
+
+# ==========================================================
+# INTEGRATIONS CONFIGURATIONS
+# ==========================================================
+FAKE_API_URL=https://jsonplaceholder.typicode.com
