--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "compression": "1.7.5",
     "helmet": "7.2.0",
     "reflect-metadata": "0.2.2",
+    "@nestjs/axios": "3.0.3",
+    "axios": "1.7.7",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
