feat: auth envs

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,11 @@ PORT=3000
 # INTEGRATIONS CONFIGURATIONS
 # ==========================================================
 FAKE_API_URL=https://jsonplaceholder.typicode.com
+
+
+# ==========================================================
+# AUTH CONFIGURATIONS
+# ==========================================================
+
+SECRETKEY=mycustomuselongsecret
+EXPIRESIN="60 days"
