--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nestjs/axios": "3.0.3",
     "@nestjs/common": "10.4.19",
     "@nestjs/config": "3.3.0",
     "@nestjs/core": "10.4.8",
+    "@nestjs/jwt": "11.0.0",
+    "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "10.4.19",
     "@nestjs/schedule": "4.1.1",
     "@nestjs/swagger": "7.4.2",
     "@prisma/client": "6.11.1",
+    "axios": "1.7.7",
+    "bcrypt": "6.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "compression": "1.7.5",
     "helmet": "7.2.0",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
     "reflect-metadata": "0.2.2",
-    "@nestjs/axios": "3.0.3",
-    "axios": "1.7.7",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
@@ -37,6 +43,8 @@
     "@types/helmet": "0.0.48",
     "@types/jest": "29.5.14",
     "@types/node": "22.5.2",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "6.0.2",
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.4.0",
