feat: created seed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,8 @@ version: "3.8"
 services:
   app:
     build: .
-    environment:
-      DATABASE_URL: postgres://postgres:postgres@db:5432/communication
-      NODE_ENV: development
+    env_file:
+      - .env
     ports:
       - "3000:3000"
     depends_on:
@@ -18,6 +17,15 @@ services:
       DATABASE_URL: postgres://postgres:postgres@db:5432/communication
     depends_on:
       - db
+
+  seed:
+    build: .
+    command: npx prisma db seed
+    environment:
+      DATABASE_URL: postgres://postgres:postgres@db:5432/communication
+    depends_on:
+      - db
+      - migrate
 
   db:
     image: postgres:16
